<resources>
    <string name="app_name">timepay</string>
    <string name="login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="email_hint">Email Address</string>
    <string name="signup_header">Sign up for an account</string>
    <string name="signup_continue_btn">continue</string>
    <string name="choose_account_header">Choose an account type here</string>
    <string name="title_activity_choose_account_type">ChooseAccountType</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_general_public_registration">GeneralPublicRegistration</string>
    <string name="title_activity_vender_registration">VendorRegistration</string>
    <string name="title_activity_accounts">Accounts</string>
    <string name="GPR_header">Fill in the details</string>
    <string name="FullName_hint">Full Name</string>
    <string name="card_subheader">Card details</string>
    <string name="pan_hint">PAN No</string>
    <string name="pan_upload">Upload PAN</string>
    <string name="cardnumber_hint">Card number</string>
    <string name="registered_companyName_hint">Registered Company Name</string>
    <string name="registered_companyID_hint">Registered Company ID</string>
    <string name="shopPublic_brandName_hint">Shop Public Brand Name</string>
    <string name="account_no_hint">Account Number</string>
    <string name="ifsc_code_hint">IFSC Code</string>
    <string name="company_id_hint">Company ID</string>
    <string name="CompleteAddress_Hint">Complete Address</string>
    <string name="CardName_hint">Name on card</string>
    <string name="PhoneNumber_hint">Phone Number</string>
    <string name="card_expiry_date">Expiry Date</string>
    <string name="expiry_month">Month</string>
    <string name="expiry_year">Year</string>
    <string name="AddressCharacterFilter">qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM1234567890#/.,()</string>
    <string name="wvIAree">https://www.google.co.in</string>
    <string name="IFSC">https://www.google.co.in</string>
    <string name="CompanyID">https://www.google.co.in</string>
    <string name="IAgree_Hint">By choosing an account type you agree with the terms and conditions</string>
    <string name="payment_gateway_link">Payment Gateway Link</string>
    <string name="Text_view_IAgree">Terms and Conditions</string>
    <string name="Text_view_CompanyID">Company ID</string>
    <string name="Text_view_IFSC">IFSC CODE</string>
    <string name="Text_view_AddAccountwithGmail">Add your account with</string>
    <string name="Button_Cancel">Cancel</string>
    <string name="Button_OK">OK</string>
    <string name="add_another_card">Add Another Card</string>
    <string name="continue_btn_GPR">Continue as Buyer</string>
    <string name="continue_btn_VR">Continue as Merchant(Owner)</string>
    <string name="continue_btn_PVR">Continue as Merchant(Add on Sale Point)</string>
    <string name="already_account">Already have an account ?</string>
    <string name="or">OR</string>


    // Urls
    <string name="getOrgType">http://124.153.111.70:8080/project-1.0.0-BUILD-SNAPSHOT/getOrgType</string>
    <string name="ok">OK</string>

</resources>
