<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="200dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvCardNameDialogBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/CardName_hint"
        android:textSize="15dp" />
    <EditText
        android:id="@+id/edCardNoDialogBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="15dp"
        android:digits="09876 54321"
        android:hint="@string/cardnumber_hint"
        android:inputType="number"
        android:maxLength="23"
        android:textSize="15dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvExpiryCard"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:text="@string/card_expiry_date"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edExpiryMonthDialogBox"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="2"
            android:hint="@string/expiry_month"
            android:maxLength="2"
            android:inputType="number"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edExpiryYearDialogBox"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:digits="09876 54321"
            android:maxLength="4"
            android:hint="@string/expiry_year"
            android:inputType="number"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelDialogForAddCard"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/Button_Cancel"
            android:textColor="#5DBCD2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnOKDialogForAddCard"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/Button_OK"
            android:textColor="#5DBCD2"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
