<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingRight="5dp">

                <!--<TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/GPR_header"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />-->

                <EditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/FullName_hint"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:digits="@string/AddressCharacterFilter"
                    android:hint="@string/CompleteAddress_Hint"
                    android:minEms="20"
                    android:minLines="2" />

                <EditText
                    android:id="@+id/etPANNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="@string/pan_hint"
                    android:inputType="text" />

                <!--Card Details 1-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|bottom"
                    android:layout_marginTop="10dp"
                    android:text="@string/card_subheader"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:digits="09876 54321"
                    android:ems="10"
                    android:hint="@string/cardnumber_hint"
                    android:inputType="number"
                    android:maxLength="23" />

                <EditText
                    android:id="@+id/etCardFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/CardName_hint"
                    android:inputType="textPersonName" />
                <!--need to auto complete from full name field-->
                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvExpiryCard"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/card_expiry_date" />

                    <TextView
                        android:id="@+id/tvExpiryMonth"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:layout_marginLeft="40dp"
                        android:text="@string/expiry_month" />

                    <TextView
                        android:id="@+id/tvExpiryYear"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/expiry_year" />
                </LinearLayout>
            -->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tvExpiryCard"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="4"
                        android:text="@string/card_expiry_date"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvExpiryMonth"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="30dp"
                        android:layout_weight="2"
                        android:text="@string/expiry_month"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvExpiryYear"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/expiry_year"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <com.example.timepay.NestedListView
                        android:id="@+id/lvCards"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:cacheColorHint="#00000000"></com.example.timepay.NestedListView>
                </LinearLayout>
                <!-- <ListView
                     android:id="@+id/lvCards"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                 </ListView>-->

                <TextView
                    android:id="@+id/tvAddAnotherCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_another_card"
                    android:textColor="#0000FF"
                    android:textSize="18dp" />
            </LinearLayout>

            <Button
                android:id="@+id/bContinue"
                android:width="300dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_weight="0"
                android:background="@android:color/holo_blue_light"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFDD"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/signup_continue_btn" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
