<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="80dp"
    android:background="#3E80B4"
    android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_emailid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/Text_view_AddAccountwithGmail"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:textStyle="bold"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#3E80B4"
            android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:background="@android:color/white"
                    android:clickable="true"
                    android:text="@string/Button_Cancel"
                    android:textColor="#5DBCD2"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnOK"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:background="@android:color/white"
                    android:clickable="true"
                    android:text="@string/Button_OK"
                    android:textColor="#5DBCD2"
                    android:textStyle="bold" />
        </LinearLayout>

</LinearLayout>
