<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:minWidth="@dimen/abc_text_size_subhead_material"
    android:nestedScrollingEnabled="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:touchscreenBlocksFocus="false">

        <!-- <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="25dp"
             android:text="@string/signup_header"
             android:textAppearance="@android:style/TextAppearance.Large"
             android:textColor="@android:color/black"
             android:textStyle="bold" />-->

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:digits="0,1,2,3,4,5,6,7,8,9"
            android:ems="10"
            android:hint="@string/PhoneNumber_hint"
            android:inputType="phone"
            android:maxLength="10"
            android:numeric="integer"
            android:phoneNumber="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:weightSum="0">

        <RelativeLayout
            android:id="@+id/rvContinueAsGPR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvContinueAsGPR"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:gravity="left|center"
                android:text="@string/continue_btn_GPR"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:text=">"
                android:textSize="22dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:background="@android:color/darker_gray"
            android:gravity="center" />

        <RelativeLayout
            android:id="@+id/rvContinueAsVendor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvContinueAsVR"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:gravity="left|center"
                android:text="@string/continue_btn_VR"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:text=">"
                android:textSize="22dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:background="@android:color/darker_gray"
            android:gravity="center" />

        <RelativeLayout
            android:id="@+id/rvContinueAsPVendor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvContinueAsPVR"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="3dp"
                android:gravity="left|center"
                android:text="@string/continue_btn_PVR"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text=">"
                android:textSize="22dp" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="horizontal">


            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="5"
                android:background="@android:color/black"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="20sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="5"
                android:background="@android:color/black"
                android:gravity="center" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/already_account"
            android:textColor="#000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="30dp"
            android:textStyle="bold" />
        <!-- <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/values"
             android:text="some text"
             />-->

    </LinearLayout>

</LinearLayout>
